infra/k8s/onboarding/taesoo-tabby-cat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taesoo-tabby-cat
  namespace: onboarding
spec:
  selector:
    app: taesoo-tabby-cat
  ports:
    - port: 3000
      targetPort: 3000
