infra/k8s/onboarding/taesoo-tabby-cat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taesoo-tabby-cat
  namespace: onboarding
spec:
  ingressClassName: traefik
  rules:
    - host: taesoo-tabby-cat.first-task.codedang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taesoo-tabby-cat
                port:
                  number: 3000
